--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+<style>
+    body {
+        overflow: hidden;
+    }
+</style>
 
     <header>
         <!-- Branding Text -->
@@ -53,3 +58,4 @@
 </body>
 
 </html>
+
