--- a/Invoice.html
+++ b/Invoice.html
@@ -71,6 +71,7 @@
 <button id="confirm-button">Confirm Payment</button>
 
 <script src="vanillaJS/scripts-invoice.JS"></script>
+<script src="js/script_store.js"></script>
 </body>
 
 </html>
